--- a/public/views/index.html
+++ b/public/views/index.html
@@ -17,10 +17,10 @@
             <link rel="stylesheet" href="styles/style.css" />
         </head>
     <body>
-        If you're building an angular app your probably don't need to use a templating system.
-        I like to use it for the occassional passing of state from the server to the client on page load.
 
-        ~{content}~
+        We've had one breakfast yes.  What about second breakfast?
+
+        <div ui-view></div>
     </body>
 
     <script type="text/javascript" src="js/bundle.js"></script>
