--- a/public/styles/core.less
+++ b/public/styles/core.less
@@ -19,7 +19,7 @@ body {
     background: black;
     color: white;
     text-align: center;
-    font-family: @text-font;
+    font-family: Arial;
     font-size: 1.4rem;
 }
 
